<resources>
    <string name="app_name">Cyber Robot Brain</string>
    <string name="action_settings">Settings</string>
    <string name="hello_robot">Hello Cyber Robot</string>
    <string name="btn_navigation">Manual Navigation</string>
    <string name="perm_error_title">Attention: Mandatory Permission</string>
    <string name="perm_error_msg">You must accept the permission to connect to the Cyber Robot.\nTry again</string>
    <string name="gps_error_title">Attention: GPS ERROR</string>
    <string name="gps_error_msg">You must turn on the gps to connect to the Cyber Robot</string>
    <string name="blue_error_title">Attention: BLUE ERROR</string>
    <string name="blue_error_msg">You must turn on the Bluetooth to connect to the Cyber Robot</string>
    <string name="no_name_device">Unknown Device</string>
    <string name="title_connect_dialog">Connect to Cyber Robot</string>
    <string name="connect_dialog_cancel">Cancel</string>


    <string name="no_device">No device found</string>
    <string name="title_activity_scan">ScanActivity</string>

    <string name="nav_forward">Move forward</string>
    <string name="nav_backward">Move backward</string>
    <string name="nav_left">Move left</string>
    <string name="nav_right">Move right</string>
    <string name="title_scan">Select a device</string>
    <string name="title_navigation">Manual Navigation</string>
    <string name="sound">Play Sound</string>

    <string name="btn_auto_navigation">Auto Navigation</string>
    <string name="title_activity_camera">CameraActivity</string>

    <string name="gps_required">Gps Required for device discovery</string>
    <string name="gps_enabling">Enable Gps</string>
    <string name="gps_cancel">Cancel</string>

    <string name="message_connected">Connected to Cyber Robot</string>
    <string name="message_connecting">Connecting to Cyber Robot</string>
    <string name="message_disconnecting">Disconnecting from Cyber Robot</string>

    <string name="action_disconnected">You cannot move the Cyber Robot if you are not connected</string>
    <string name="wait_during_scan">You must wait until scanning is complete</string>
    <string name="take_picture">Take picture</string>

    <string name="skip">SKIP THIS ONE</string>
    <string name="repeat">REPEAT</string>

    <string name="camera_perm_error">You must accept the permission to use the camera</string>
    <string name="info_target">Tap the target indicator</string>
    <string name="info_left">Tap the left indicator of the robot</string>
    <string name="info_right">Tap the right indicator of the robot</string>
    <string name="button_recalibration">Recalibrate Colors</string>
    <string name="button_calibration">Calibrate Colors</string>
    <string name="info_recalibration">Frame together the three markers at 15 cm and press the button below.</string>
    <string name="error_occured">An unexpected error has occurred. Please retry and if the problem persist, reconnect to the Cyber Robot</string>
    <string name="error_occured_camera">An unexpected error has occurred. Please retry.</string>
    <string name="error_camera">An unexpected error has occurred during the connection to the camera. Please retry.</string>
    <string name="null_center">The markers are not framed! Try again</string>
    <string name="target_null_arrived">Target not found, you are arrived</string>
    <string name="arrived_target_bound">The robot is arrived at the destination</string>

    <string-array name="movement_type">
        <item>L Movement</item>
        <item>Direct Movement</item>
    </string-array>

    <string name="movement_type_title">Select the type of movement</string>
    <string name="selected_color">Selected Color</string>
    <string name="movement_l">L Movement</string>
    <string name="movement_direct">Direct Movement</string>
    <string name="info_calibration">You need to calibrate the colors!</string>
    <string name="stopping">Stopping the Robot..</string>
</resources>