<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000"
    android:gravity="center_vertical|center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/forward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/nav_forward"
            android:src="@drawable/ic_up_arrow"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageButton
                android:id="@+id/left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/nav_left"
                android:src="@drawable/ic_left_arrow"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:layout_marginRight="40dp"
                android:paddingTop="60dp"
                />
            <ImageButton
                android:id="@+id/sound_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/sound"
                android:src="@drawable/ic_bell"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:layout_marginRight="40dp"
                android:paddingTop="60dp"
                />
            <ImageButton
                android:id="@+id/right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:title="@string/nav_right"
                android:src="@drawable/ic_right_arrow"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:paddingTop="60dp"
                />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <ImageButton
            android:id="@+id/backward_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:title="@string/nav_backward"
            android:src="@drawable/ic_down_arrow"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:paddingTop="60dp"
            />
    </LinearLayout>
</LinearLayout>